removing imports, general cleaning